--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,22 +10,22 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4   # ✅ 必须用 v4
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v4   # ✅ 必须用 v4
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
 
       - name: Build with Gradle
         run: ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v4   # ✅ 必须用 v4
+        uses: actions/upload-artifact@v4
         with:
-          name: AdminAppFirebase-APK
+          name: App-debug-APK
           path: app/build/outputs/apk/debug/app-debug.apk
