--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,30 +2,34 @@ name: Build Android APK
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
-      - name: Set up Gradle
-        uses: gradle/gradle-build-action@v3
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
 
-      - name: Build with Gradle
-        run: gradle assembleDebug
+    - name: Set up Gradle
+      uses: gradle/actions/setup-gradle@v3
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: AdminAppFirebase-APK
-          path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Build with Gradle
+      run: ./gradlew assembleDebug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-debug.apk
+        path: app/build/outputs/apk/debug/app-debug.apk
